added pagination and a new test API
