# src/routes/user.routes.js
@@ -9,9 +9,9 @@ router.route("/login").post(loginUser);
 
 // Secured Routes
 router.route("/logout").post(verifyJWT, logoutUser);
-router.route('/refresh-token').post(refreshAccessToken);
-router.route('/change-password').post(verifyJWT, changeCurrentPassword);
-router.route('/current-user').get(verifyJWT, getCurrentUser);
+router.route('/refreshToken').post(refreshAccessToken);
+router.route('/changePassword').post(verifyJWT, changeCurrentPassword);
+router.route('/currentUser').get(verifyJWT, getCurrentUser);
 router.route('/attemptedTests').get(verifyJWT, getAtteptedTests);
 
 
